<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_arrow_back"
        android:layout_width="316dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_back"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        app:srcCompat="@drawable/drawable_arrow" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="264dp"
        android:layout_height="259dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dummy_mobile"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="316dp"
        android:layout_height="350dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/register_text_main"
            android:textColor="@color/colorAccent"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/connect_text_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/register_text_sub"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/register_field_login"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/edit_round"
            android:drawableStart="@drawable/drawable_person"
            android:drawablePadding="8dp"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/login_field_login"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/register_field_password"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_round"
            android:drawableStart="@drawable/drawable_lock"
            android:drawablePadding="8dp"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/login_field_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/register_button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_round"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/login_button_register"
            android:textColor="#fff" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>