<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_history_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AppActualActivity">

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="628dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/app_actual_text_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_actual_text_main"
            android:textColor="@color/colorAccent"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/app_actual_text_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_actual_text_sub"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="417dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/app_actual_text_heartbeat"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="0 bpm"
                    android:textColor="@color/colorBlack"
                    android:textSize="32sp"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:id="@+id/app_actual_icon_heart"
                    android:layout_width="51dp"
                    android:layout_height="32dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:scaleType="fitStart"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/drawable_heart"
                    tools:ignore="InefficientWeight" />
            </LinearLayout>

            <TextView
                android:id="@+id/app_actual_text_heartrate_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/app_actual_text_heartbeat"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/app_actual_text_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="0 km"
                android:textColor="@color/colorBlack"
                android:textSize="32sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/app_actual_text_distance_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/app_actual_text_distance"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/app_actual_text_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="0"
                android:textColor="@color/colorBlack"
                android:textSize="32sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/app_actual_text_steps_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/app_actual_text_steps"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/app_actual_text_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="0 cal"
                android:textColor="@color/colorBlack"
                android:textSize="32sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/app_actual_text_calories_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/app_actual_text_calories_sub"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/app_actual_text_arrow"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/drawable_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>